2006-07-18 23:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFunctions.m: Remove the width and height adjustment
	from the function minimalContainerFrame().
	* GormCore/GormPrivate.m: Add the encoding logic for saving
	NSCustomObject.
	* GormCore/GormViewWindow.m: Add the width and height here, instead
	of in the function.

2006-07-16 23:13 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFunctions.h:
	* GormCore/GormFunctions.m:
	* GormCore/GormViewWindow.m: Improved placement of standalone
	views when being loaded by .gorm files.

2006-07-15 18:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/Gorm.tiff: Slightly improved icon.  Based on suggestions
	from people on #gnustep.  More improvements to come.

2006-07-12 00:31 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: in testInterface, make the item with terminate:
	the "Quit Test" item, if none is found add one.

2006-07-10 01:32 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGormWrapperLoader.m: in loadFileWrapper:withDocument:
	removed the check for the info file.  Some earlier versions of
	the .gorm wrapper don't have this file.

2006-07-09 23:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Replace the destination or
	source of any connection which connects to an NSWindowTemplate object.

2006-07-09 17:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m: Correction for issue which was causing
	size inspector not to update when a view was moved or changed.
	Removed code in editoedObjectFrameDidChange: and frameDidChange:
	to correct the problem.

2006-07-09 13:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Correct test for customClass or
	name in loadFileWrapper:withDocument:.

2006-07-09 11:18 Gregory John Casamento <greg_casamento@yahoo.com>
